@@ -1,3 +1,10 @@
+2004-10-21  Harish Krishnaswamy  <kharish@novell.com>
+
+	* gui/e-cal-popup.[ch]: (e_cal_popup_target_new_source):
+	Add status bits to denote if the calendar source is available offline
+	so that plugins to calendar popups can use the status qualifier to denote 
+	their visibility preferences. 
+
 2004-10-21  Rodrigo Moya <rodrigo@novell.com>
 
 	* gui/dialogs/select-source-dialog.c: use the new source selector
